fix: JDK17-unsafe List.getFirst() in SelectExecutionPlanner
Introduced by cherry-picked commit 8f56e29de (fix #4389 expand() AS
alias). List.getFirst() is a JDK21 SequencedCollection default method
not available under java17 --release compilation; replace with get(0).